@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-  ~ Copyright (C) 2014 jsonwebtoken.io
+  ~ Copyright (C) 2014-2023 jsonwebtoken.io
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -14,7 +14,8 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>io.jsonwebtoken</groupId>
@@ -85,35 +86,15 @@
                 <enabled>true</enabled>
             </snapshots>
         </repository>
-        <!-- temporary fix until official release of coverall-maven-plugin with clover support: -->
-        <repository>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-            <id>bintray-jwtk-coveralls-maven-plugin</id>
-            <name>bintray</name>
-            <url>https://dl.bintray.com/jwtk/coveralls-maven-plugin</url>
-        </repository>
     </repositories>
-    <pluginRepositories>
-        <!-- temporary fix until official release of coverall-maven-plugin with clover support: -->
-        <pluginRepository>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-            <id>bintray-jwtk-coveralls-maven-plugin</id>
-            <name>bintray-plugins</name>
-            <url>https://dl.bintray.com/jwtk/coveralls-maven-plugin</url>
-        </pluginRepository>
-    </pluginRepositories>
 
     <properties>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <arguments />
+        <arguments/>
 
         <jjwt.root>${basedir}</jjwt.root>
-        <jjwt.previousVersion>0.10.7</jjwt.previousVersion>
+        <jjwt.previousVersion>0.11.2</jjwt.previousVersion>
 
         <maven.jar.version>3.2.2</maven.jar.version>
         <maven.compiler.version>3.8.1</maven.compiler.version> <!-- max version allowed for JDK 7 builds -->
@@ -123,6 +104,8 @@
         <maven.gpg.version>1.6</maven.gpg.version> <!-- max version allowed for JDK 7 builds -->
         <maven.japicmp.version>0.13.1</maven.japicmp.version> <!-- max version allowed for JDK 7 builds -->
         <gmavenplus.version>1.6.1</gmavenplus.version> <!-- higher version used in jdk8AndLater profile below -->
+        <maven.license.version>4.2.rc3</maven.license.version>
+        <maven.license.skipExistingHeaders>true</maven.license.skipExistingHeaders>
 
         <jdk.version>1.7</jdk.version>
         <buildNumber>${user.name}-${maven.build.timestamp}</buildNumber>
@@ -131,7 +114,7 @@
         <orgjson.version>20230227</orgjson.version>
         <gson.version>2.9.0</gson.version>
 
-        <maven.javadoc.additionalOptions />
+        <maven.javadoc.additionalOptions/>
 
         <!-- Optional Runtime Dependencies: -->
         <bouncycastle.version>1.70</bouncycastle.version>
@@ -145,7 +128,32 @@
         <surefire.plugin.version>3.0.0-M5</surefire.plugin.version>
         <clover.version>4.3.1</clover.version> <!-- max version allowed for JDK 7 builds -->
         <clover.db>${jjwt.root}/target/clover/clover.db</clover.db>
-        <surefire.argLine />
+        <surefire.argLine/>
+        <test.addOpens>
+            --add-opens java.base/java.time.zone=ALL-UNNAMED,
+            --add-opens java.base/java.lang.ref=ALL-UNNAMED,
+            --add-opens java.base/java.lang=ALL-UNNAMED,
+            --add-opens java.base/java.lang.reflect=ALL-UNNAMED,
+            --add-opens java.base/java.net=ALL-UNNAMED,
+            --add-opens java.base/java.nio.charset=ALL-UNNAMED,
+            --add-opens java.base/java.nio.file=ALL-UNNAMED,
+            --add-opens java.base/java.security.cert=ALL-UNNAMED,
+            --add-opens java.base/java.text=ALL-UNNAMED,
+            --add-opens java.base/java.util.regex=ALL-UNNAMED,
+            --add-opens java.base/java.util.stream=ALL-UNNAMED,
+            --add-opens java.base/java.util.concurrent=ALL-UNNAMED,
+            --add-opens java.base/java.util.concurrent.atomic=ALL-UNNAMED,
+            --add-opens java.base/java.util.concurrent.locks=ALL-UNNAMED,
+            --add-opens java.base/java.time=ALL-UNNAMED,
+            --add-opens java.base/java.util=ALL-UNNAMED,
+            --add-opens java.base/java.io=ALL-UNNAMED,
+            --add-opens java.base/java.security=ALL-UNNAMED,
+            --add-opens java.base/jdk.internal.loader=ALL-UNNAMED,
+            --add-opens java.base/sun.nio.fs=ALL-UNNAMED,
+            --add-opens java.base/sun.security.x509=ALL-UNNAMED,
+            --add-opens java.base/sun.security.util=ALL-UNNAMED,
+            --add-opens java.logging/java.util.logging=ALL-UNNAMED
+        </test.addOpens>
 
     </properties>
 
@@ -287,6 +295,7 @@
                         <historyDir>${user.home}/.clover/${project.groupId}/jjwt</historyDir> -->
                         <excludes>
                             <exclude>io/jsonwebtoken/lang/*</exclude>
+                            <exclude>io/jsonwebtoken/all/JavaReadmeTest.java</exclude>
                         </excludes>
                         <methodPercentage>100.000000%</methodPercentage>
                         <statementPercentage>100.000000%</statementPercentage>
@@ -297,26 +306,44 @@
                 <plugin>
                     <groupId>com.mycila</groupId>
                     <artifactId>license-maven-plugin</artifactId>
-                    <version>3.0</version>
+                    <version>${maven.license.version}</version>
                     <configuration>
-                        <aggregate>true</aggregate>
-                        <skipExistingHeaders>true</skipExistingHeaders>
-                        <header>${jjwt.root}/src/license/header.txt</header>
-                        <headerDefinitions>
-                            <headerDefinition>${jjwt.root}/src/license/header_format.xml</headerDefinition>
-                        </headerDefinitions>
-                        <properties>
-                            <organization.name>${project.organization.name}</organization.name>
-                            <year>2019</year>
-                        </properties>
-                        <excludes>
-                            <exclude>**/*.txt</exclude>
-                            <exclude>LICENSE</exclude>
-                            <exclude>**/lombok.config</exclude>
-                            <exclude>**/mvnw</exclude>
-                            <exclude>.gitattributes</exclude>
-                        </excludes>
+                        <skipExistingHeaders>${maven.license.skipExistingHeaders}</skipExistingHeaders>
+                        <mapping>
+                            <toml>SCRIPT_STYLE</toml> <!-- yaml -->
+                            <pem>SCRIPT_STYLE</pem> <!-- any will do -->
+                        </mapping>
+                        <licenseSets>
+                            <licenseSet>
+                                <header>${jjwt.root}/src/license/header.txt</header>
+                                <excludes>
+                                    <exclude>**/license/header.txt</exclude>
+                                    <exclude>**/*.test.orgjson</exclude>
+                                    <exclude>**/*.test.gson</exclude>
+                                    <exclude>**/*.test.override</exclude>
+                                    <exclude>**/*.bnd</exclude>
+                                    <exclude>LICENSE</exclude>
+                                    <exclude>**/mvnw</exclude>
+                                    <exclude>**/lombok.config</exclude>
+                                    <exclude>.gitattributes</exclude>
+                                </excludes>
+                            </licenseSet>
+                        </licenseSets>
                     </configuration>
+                    <dependencies>
+                        <dependency>
+                            <groupId>com.mycila</groupId>
+                            <artifactId>license-maven-plugin-git</artifactId>
+                            <version>${maven.license.version}</version>
+                        </dependency>
+                    </dependencies>
+                    <executions>
+                        <execution>
+                            <goals>
+                                <goal>check</goal>
+                            </goals>
+                        </execution>
+                    </executions>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -394,10 +421,18 @@
                         </oldVersion>
                         <parameter>
                             <onlyModified>true</onlyModified>
-                            <breakBuildOnBinaryIncompatibleModifications>true
-                            </breakBuildOnBinaryIncompatibleModifications>
+                            <!-- <breakBuildOnBinaryIncompatibleModifications>true</breakBuildOnBinaryIncompatibleModifications> -->
                             <!-- TODO: enable after 1.0 -->
-                            <!-- <breakBuildBasedOnSemanticVersioning>true</breakBuildBasedOnSemanticVersioning>-->
+                            <breakBuildBasedOnSemanticVersioning>true</breakBuildBasedOnSemanticVersioning>
+
+                            <!-- All of the following can be removed after 0.11.1 is released: -->
+                            <!-- <excludes>
+                                <exclude>io.jsonwebtoken.Header#getAlgorithm()</exclude>
+                                <exclude>io.jsonwebtoken.Header#setAlgorithm(java.lang.String)</exclude>
+                                <exclude>io.jsonwebtoken.JwsHeader#getAlgorithm()</exclude>
+                                <exclude>io.jsonwebtoken.JwsHeader#setAlgorithm(java.lang.String)</exclude>
+                                <exclude>io.jsonwebtoken.lang.Assert#notNull(java.lang.Object,java.lang.String)</exclude>
+                            </excludes> -->
                         </parameter>
                     </configuration>
                     <executions>
@@ -428,7 +463,8 @@
                             </includes>
                         </artifactSet>
                         <transformers>
-                            <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
+                            <transformer
+                                    implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                         </transformers>
                     </configuration>
                     <executions>
@@ -592,7 +628,6 @@
                 </configuration>
             </plugin>
             <plugin>
-                <!-- Temporarily host coveralls SNAPSHOT with clover support locally:  -->
                 <groupId>io.jsonwebtoken.coveralls</groupId>
                 <artifactId>coveralls-maven-plugin</artifactId>
                 <version>4.4.1</version>
@@ -609,7 +644,7 @@
                 <gmavenplus.version>1.13.1</gmavenplus.version>
                 <groovy.version>3.0.10</groovy.version>
                 <easymock.version>4.2</easymock.version>
-                <powermock.version>2.0.2</powermock.version>
+                <powermock.version>2.0.7</powermock.version>
                 <maven.japicmp.version>0.15.6</maven.japicmp.version>
             </properties>
         </profile>
@@ -621,21 +656,17 @@
             </activation>
             <properties>
                 <maven.javadoc.additionalOptions>-html5</maven.javadoc.additionalOptions>
-                <surefire.argLine>--add-opens java.base/jdk.internal.loader=ALL-UNNAMED</surefire.argLine>
+                <surefire.argLine>${test.addOpens}, --illegal-access=debug</surefire.argLine>
             </properties>
         </profile>
         <profile>
-            <id>jdk16AndLater</id>
+            <id>jdk17AndLater</id>
             <activation>
-                <jdk>[16,)</jdk>
+                <jdk>[17,)</jdk>
             </activation>
             <properties>
-                <surefire.argLine>
-                    --add-opens java.base/java.lang=ALL-UNNAMED
-                    --add-opens java.base/java.lang.ref=ALL-UNNAMED
-                    --add-opens java.base/java.util=ALL-UNNAMED
-                    --add-opens java.base/sun.security.util=ALL-UNNAMED
-                </surefire.argLine>
+                <maven.javadoc.additionalOptions>-html5</maven.javadoc.additionalOptions>
+                <surefire.argLine>${test.addOpens}</surefire.argLine>
             </properties>
         </profile>
         <profile>
